--- a/bo/firefox-ios.xliff
+++ b/bo/firefox-ios.xliff
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?><xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 http://docs.oasis-open.org/xliff/v1.2/os/xliff-core-1.2-strict.xsd">
   <file original="Client/en.lproj/InfoPlist.strings" source-language="en" target-language="bo" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="NSCameraUsageDescription" xml:space="preserve">
@@ -47,7 +47,7 @@
   </file>
   <file original="Shared/en.lproj/3DTouchActions.strings" datatype="plaintext" source-language="en" target-language="bo">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Add to Bookmarks" xml:space="preserve">
@@ -86,7 +86,7 @@
   </file>
   <file original="Shared/en.lproj/AuthenticationManager.strings" datatype="plaintext" source-language="en" target-language="bo">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="After 1 hour" xml:space="preserve">
@@ -213,7 +213,7 @@
   </file>
   <file original="Shared/en.lproj/ClearHistoryConfirm.strings" source-language="en" target-language="bo" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Cancel" xml:space="preserve">
@@ -234,7 +234,7 @@
   </file>
   <file original="Shared/en.lproj/ClearPrivateData.strings" datatype="plaintext" source-language="en" target-language="bo">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Browsing History" xml:space="preserve">
@@ -269,7 +269,7 @@
   </file>
   <file original="Shared/en.lproj/ClearPrivateDataConfirm.strings" source-language="en" target-language="bo" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Cancel" xml:space="preserve">
@@ -290,7 +290,7 @@
   </file>
   <file original="Shared/en.lproj/Default Browser.strings" datatype="plaintext" source-language="en" target-language="bo">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="DefaultBrowserCard.Button" xml:space="preserve">
@@ -337,7 +337,7 @@
   </file>
   <file original="Shared/en.lproj/ErrorPages.strings" datatype="plaintext" source-language="en" target-language="bo">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Open in Safari" xml:space="preserve">
@@ -352,7 +352,7 @@
   </file>
   <file original="Shared/en.lproj/FindInPage.strings" datatype="plaintext" source-language="en" target-language="bo">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Done" xml:space="preserve">
@@ -375,7 +375,7 @@
   </file>
   <file original="Shared/en.lproj/HistoryPanel.strings" source-language="en" target-language="bo" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Delete" xml:space="preserve">
@@ -387,7 +387,7 @@
   </file>
   <file original="Shared/en.lproj/Intro.strings" datatype="plaintext" source-language="en" target-language="bo">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Intro.Slides.Automatic.Privacy.Description" xml:space="preserve">
@@ -486,7 +486,7 @@
   </file>
   <file original="Shared/en.lproj/Localizable.strings" source-language="en" target-language="bo" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="+" xml:space="preserve">
@@ -3376,7 +3376,7 @@
   </file>
   <file original="Shared/en.lproj/LoginManager.strings" source-language="en" target-language="bo" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Are you sure?" xml:space="preserve">
@@ -3471,7 +3471,7 @@
   </file>
   <file original="Shared/en.lproj/Menu.strings" datatype="plaintext" source-language="en" target-language="bo">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Menu.AddBookmarkAction.Title" xml:space="preserve">
@@ -3602,7 +3602,7 @@
   </file>
   <file original="Shared/en.lproj/PrivateBrowsing.strings" datatype="plaintext" source-language="en" target-language="bo">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Close Private Tabs" xml:space="preserve">
@@ -3649,7 +3649,7 @@
   </file>
   <file original="Shared/en.lproj/Search.strings" source-language="en" target-language="bo" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="%@ search" xml:space="preserve">
@@ -3670,7 +3670,7 @@
   </file>
   <file original="Shared/en.lproj/Shared.strings" datatype="plaintext" source-language="en" target-language="bo">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="%@ on %@" xml:space="preserve">
@@ -3681,7 +3681,7 @@
   </file>
   <file original="Shared/en.lproj/Storage.strings" datatype="plaintext" source-language="en" target-language="bo">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Bookmarks Menu" xml:space="preserve">
@@ -3704,7 +3704,7 @@
   </file>
   <file original="Shared/en.lproj/Today.strings" datatype="plaintext" source-language="en" target-language="bo">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="TodayWidget.ClosePrivateTabsButton" xml:space="preserve">
@@ -3899,7 +3899,7 @@ Private Tab</source>
   </file>
   <file original="Shared/Supporting Files/en.lproj/BookmarkPanel.strings" datatype="plaintext" source-language="en" target-language="bo">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Delete" xml:space="preserve">
@@ -3910,7 +3910,7 @@ Private Tab</source>
   </file>
   <file original="Shared/Supporting Files/en.lproj/BookmarkPanelDeleteConfirm.strings" datatype="plaintext" source-language="en" target-language="bo">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Bookmarks.DeleteFolderWarning.CancelButton.Label" xml:space="preserve">
@@ -3933,7 +3933,7 @@ Private Tab</source>
   </file>
   <file original="WidgetKit/Base.lproj/WidgetIntents.intentdefinition" datatype="plaintext" source-language="en" target-language="bo">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="2GqvPe" xml:space="preserve">
@@ -4004,7 +4004,7 @@ Private Tab</source>
   </file>
   <file original="WidgetKit/en.lproj/Localizable.strings" datatype="plaintext" source-language="en" target-language="bo">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Open Firefox" xml:space="preserve">
